--- a/index.html
+++ b/index.html
@@ -4,27 +4,154 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="header_logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#"> Узнать →</a>
+      </h2>
+        <img class="header__main-illustration" src="images/header-image.png" width="765" height="608" alt="Картина опять двойка">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
+            <div class="two-columns__paragraph two-columns__paragraph_margin"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
+            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+            </div>
+          </div>
       </section>
 
       <section class="digits">
+        <section class="section-title">
+          <h4 class="section-title__header">Цифры и факты</h4>
+        </section>
+        <section class="section-subtitle">
+          <p>Про учебу и мозг</p>
+        </section>
+        <div class="table">
+          <div class="table__cell">
+            <h5 class="table__heading">86 миллиардов</h5>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">2.1 миллиарда</h5>
+            <p class="table__text">Число нуждающихся в повышении квалификации </p> <div class="table__text_source">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">1000 терабайт</h5>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">500 триллионов</h5>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">420 миллионов</h5>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> <div class="table__text_source">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">17–20 лет</h5>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">1885 год</h5>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h5 class="table__heading">1889 год</h5>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feinman">
+        <h3 class="feiman__title">Метод Фейнмана</h3>
+        <p class="feiman__subtitle">Выучить и не забыть.</p>
+        <a class="feiman__link" href="#">Подробнее →</a>
+        <img class="feiman__image" src="images/feynman.png"  alt="Картинка с Ричардом Фейнманом">
       </section>
 
       <section class="kaufman">
+        <h4 class="section-title_theme_dark">Принципы обучения</h4>
+        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">1</h5>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">2</h5>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">3</h5>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">4</h5>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">5</h5>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">6</h5>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">7</h5>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">8</h5>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">9</h5>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">10</h5>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Синий треугольник">
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="footer__author"> &copy;2019. Виктор Абанькин</div>
+          <div class="header__logo logo_place_footer"></div>
+        </div>
+        <div class="footer__column_content_info">
+          <div class="footer__column-heading">О практикуме</div>
+          <ul class="footer__column-links">
+            <li class="footer__column-links_main-info">Главная</li>
+            <li class="footer__column-links_main-info">Концепция</li>
+            <li class="footer__column-links_main-info footer__column-links_padding-bottom">Наставники</li>
+          </ul>
+        </div>
+        <div class="footer__column_content_social">
+          <div class="footer__column-heading">Соцсети</div>
+          <ul class="footer__column-links">
+            <li class="footer__column-links_main-info"><a href="#"><img class="footer__column-links_facebook" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
+            <li class="footer__column-links_main-info"><a href="#"><img class="footer__column-links_vk" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
+            <li class="footer__column-links_main-info footer__column-links_padding-bottom"><a href="#"><img class="footer__column-links_facebook" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
+          </ul>
+          <div class="footer__social-icon"></div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
