--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <div class="header_logo logo_place_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#"> Узнать →</a>
-      </h2>
-        <img class="header__main-illustration" src="images/header-image.png" width="765" height="608" alt="Картина опять двойка">
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#"> Узнать &rarr;</a>
+      </p>
+        <img class="header__main-illustration" src="images/header-image.png" alt="Картина опять двойка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -23,20 +23,16 @@
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-            <div class="two-columns__paragraph two-columns__paragraph_margin"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
           </div>
       </section>
 
       <section class="digits">
-        <section class="section-title">
-          <h4 class="section-title__header">Цифры и факты</h4>
-        </section>
-        <section class="section-subtitle">
-          <p>Про учебу и мозг</p>
-        </section>
+        <h2 class="section-title section-title__header">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h5 class="table__heading">86 миллиардов</h5>
@@ -44,7 +40,7 @@
           </div>
           <div class="table__cell">
             <h5 class="table__heading">2.1 миллиарда</h5>
-            <p class="table__text">Число нуждающихся в повышении квалификации </p> <div class="table__text_source">Всемирный Банк, 2017</div>
+            <p class="table__text">Число нуждающихся в повышении квалификации </p> <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h5 class="table__heading">1000 терабайт</h5>
@@ -56,7 +52,7 @@
           </div>
           <div class="table__cell">
             <h5 class="table__heading">420 миллионов</h5>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> <div class="table__text_source">Всемирный Банк, 2017</div>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h5 class="table__heading">17–20 лет</h5>
@@ -74,15 +70,15 @@
       </section>
 
       <section class="feinman">
-        <h3 class="feiman__title">Метод Фейнмана</h3>
-        <p class="feiman__subtitle">Выучить и не забыть.</p>
-        <a class="feiman__link" href="#">Подробнее →</a>
-        <img class="feiman__image" src="images/feynman.png"  alt="Картинка с Ричардом Фейнманом">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть.</p>
+        <a class="feinman__link" href="#">Подробнее &rarr;</a>
+        <img class="feinman__image" src="images/feynman.png"  alt="Картинка с Ричардом Фейнманом">
       </section>
 
       <section class="kaufman">
-        <h4 class="section-title_theme_dark">Принципы обучения</h4>
-        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h4 class="section-title section-title_theme_dark">Принципы обучения</h4>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h5 class="table__heading table__heading_theme_dark">1</h5>
@@ -125,31 +121,30 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Синий треугольник">
+        <div class="kaufman__triangle" src="images/kaufman-triangle.svg"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <div class="footer__author"> &copy;2019. Виктор Абанькин</div>
-          <div class="header__logo logo_place_footer"></div>
+        <div class="footer__columns_content_copyright">
+          <p class="footer__author"> &copy;2019. Виктор Абанькин</p>
+          <div class="logo logo_place_footer"></div>
         </div>
-        <div class="footer__column_content_info">
-          <div class="footer__column-heading">О практикуме</div>
-          <ul class="footer__column-links">
-            <li class="footer__column-links_main-info">Главная</li>
-            <li class="footer__column-links_main-info">Концепция</li>
-            <li class="footer__column-links_main-info footer__column-links_padding-bottom">Наставники</li>
+        <nav class="footer__columns_content_info">
+          <h3 class="footer__columns-heading">О практикуме</h3>
+          <ul class="footer__columns-links">
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Главная</a></li>
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Концепция</a></li>
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Наставники</a></li>
           </ul>
-        </div>
-        <div class="footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
-          <ul class="footer__column-links">
-            <li class="footer__column-links_main-info"><a href="#"><img class="footer__column-links_facebook" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
-            <li class="footer__column-links_main-info"><a href="#"><img class="footer__column-links_vk" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
-            <li class="footer__column-links_main-info footer__column-links_padding-bottom"><a href="#"><img class="footer__column-links_facebook" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
+        </nav>
+        <div class="footer__columns_content_social">
+          <h3 class="footer__columns-heading">Соцсети</h3>
+          <ul class="footer__columns-links">
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
+            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
           </ul>
-          <div class="footer__social-icon"></div>
         </div>
       </div>
     </footer>
