--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
       </section>
 
       <section class="digits">
-        <h2 class="section-title section-title__header">Цифры и факты</h2>
+        <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <h5 class="table__heading">86 миллиардов</h5>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">2.1 миллиарда</h5>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации </p> <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">1000 терабайт</h5>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">500 триллионов</h5>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">420 миллионов</h5>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">17–20 лет</h5>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">1885 год</h5>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <h5 class="table__heading">1889 год</h5>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
@@ -77,73 +77,73 @@
       </section>
 
       <section class="kaufman">
-        <h4 class="section-title section-title_theme_dark">Принципы обучения</h4>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">1</h5>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">2</h5>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">3</h5>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">4</h5>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">5</h5>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">6</h5>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">7</h5>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">8</h5>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">9</h5>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">10</h5>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle" src="images/kaufman-triangle.svg"></div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <p class="footer__author"> &copy;2019. Виктор Абанькин</p>
           <div class="logo logo_place_footer"></div>
         </div>
-        <nav class="footer__columns_content_info">
-          <h3 class="footer__columns-heading">О практикуме</h3>
-          <ul class="footer__columns-links">
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Главная</a></li>
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Концепция</a></li>
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#">Наставники</a></li>
+        <nav class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
+          <ul class="footer__column-links">
+            <li class="footer__list-item"><a class="footer__column-link" href="#">Главная</a></li>
+            <li class="footer__list-item"><a class="footer__column-link" href="#">Концепция</a></li>
+            <li class="footer__list-item"><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
         </nav>
-        <div class="footer__columns_content_social">
-          <h3 class="footer__columns-heading">Соцсети</h3>
-          <ul class="footer__columns-links">
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
-            <li class="footer__columns-links_main-info"><a class="footer__columns-links" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
+            <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
+            <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
           </ul>
         </div>
       </div>
