--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img src="../how-to-learn/sprint-2-sources/images_sprint-2/cards-attention.png" alt="Изображение книги" class="cards__image">
+            <img src="./sprint-2-sources/images_sprint-2/cards-attention.png" alt="Изображение книги" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/sprint-2-sources/images_sprint-2/cards-recall.png" alt="Скульптура" class="cards__image">
+            <img src="./sprint-2-sources/images_sprint-2/cards-recall.png" alt="Скульптура" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/sprint-2-sources/images_sprint-2/cards-interliving.png" alt="Фотография улицы" class="cards__image">
+            <img src="./sprint-2-sources/images_sprint-2/cards-interliving.png" alt="Фотография улицы" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/sprint-2-sources/images_sprint-2/cards-question.png" alt="Картина с человеком" class="cards__image">
+            <img src="./sprint-2-sources/images_sprint-2/cards-question.png" alt="Картина с человеком" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/sprint-2-sources/images_sprint-2/cards-competence.png" alt="Фотография стопки книг" class="cards__image">
+            <img src="./sprint-2-sources/images_sprint-2/cards-competence.png" alt="Фотография стопки книг" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -134,7 +134,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="../how-to-learn/sprint-2-sources/images_sprint-2/khan-book.jpg" alt="Книга Салмана Хана 'Весь мир - школа'">
+            <img class="khan__book-pic" src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="Книга Салмана Хана 'Весь мир - школа'">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -185,17 +185,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="../how-to-learn/images/kaufman-triangle.svg" class="kaufman__triangle" alt="Вращающийся треугольник">
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Вращающийся треугольник">
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img src="../how-to-learn/sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса">
-          <img src="../how-to-learn/sprint-2-sources/images_sprint-2/logo/resources-n1.svg" class="resources__logo" alt="лого н1">
-          <img src="../how-to-learn/sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" class="resources__logo" alt="лого стрелки">
-          <img src="../how-to-learn/sprint-2-sources/images_sprint-2/logo/resources-polka.svg" class="resources__logo" alt="лого полки">
+          <img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса">
+          <img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" class="resources__logo" alt="лого н1">
+          <img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" class="resources__logo" alt="лого стрелки">
+          <img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" class="resources__logo" alt="лого полки">
         </div>
       </section>
 
