--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="header__link" href="#"> Узнать &rarr;</a>
       </p>
         <img class="header__main-illustration" src="images/header-image.png" alt="Картина опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -66,8 +66,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -185,17 +185,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Вращающийся треугольник">
+        <div class="kaufman__triangle rotation" > </div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" class="resources__logo" alt="лого н1">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" class="resources__logo" alt="лого стрелки">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" class="resources__logo" alt="лого полки">
+          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса"></a>
+          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" class="resources__logo" alt="лого н1"></a>
+          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" class="resources__logo" alt="лого стрелки"></a>
+          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" class="resources__logo" alt="лого полки"></a>
         </div>
       </section>
 
@@ -214,14 +214,14 @@
             <li class="footer__list-item"><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
         </nav>
-        <div class="footer__column footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Иконка Фейсбука"> Facebook</a></li>
             <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте</a></li>
             <li class="footer__list-item"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Иконка Инстаграма"> Instagram</a></li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
