--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img src="./sprint-2-sources/images_sprint-2/cards-attention.png" alt="Изображение книги" class="cards__image">
+            <img src="./images/cards-attention.png" alt="Изображение книги" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img src="./sprint-2-sources/images_sprint-2/cards-recall.png" alt="Скульптура" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Скульптура" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img src="./sprint-2-sources/images_sprint-2/cards-interliving.png" alt="Фотография улицы" class="cards__image">
+            <img src="./images/cards-interliving.png" alt="Фотография улицы" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img src="./sprint-2-sources/images_sprint-2/cards-question.png" alt="Картина с человеком" class="cards__image">
+            <img src="./images/cards-question.png" alt="Картина с человеком" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img src="./sprint-2-sources/images_sprint-2/cards-competence.png" alt="Фотография стопки книг" class="cards__image">
+            <img src="./images/cards-competence.png" alt="Фотография стопки книг" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -134,7 +134,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="Книга Салмана Хана 'Весь мир - школа'">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Салмана Хана 'Весь мир - школа'">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -192,10 +192,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса"></a>
-          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" class="resources__logo" alt="лого н1"></a>
-          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" class="resources__logo" alt="лого стрелки"></a>
-          <a class="resources__link" href="#"><img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" class="resources__logo" alt="лого полки"></a>
+          <a class="resources__link" href="#"><img src="./images/resources-arzamas.svg" class="resources__logo" alt="лого арзамаса"></a>
+          <a class="resources__link" href="#"><img src="./images/resources-n1.svg" class="resources__logo" alt="лого н1"></a>
+          <a class="resources__link" href="#"><img src="./images/resources-strelka.svg" class="resources__logo" alt="лого стрелки"></a>
+          <a class="resources__link" href="#"><img src="./images/resources-polka.svg" class="resources__logo" alt="лого полки"></a>
         </div>
       </section>
 
